# Blackt

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE.md  README.md  attempt_1.py  changes.diff  pyproject.toml  requirements.txt
.github/workflows/: mirror-to-codeberg.yaml  test-lint.yaml
DOCS/: README.md
DOCS/blackt/: index.md  module.md
DOCS/blackt_new/: index.md  module.md
blackt/: __init__.py  __main__.py  doc.txt
blackt_new/: __init__.py  __main__.py
documentation/reference/: MODULES.md  README.md
documentation/reference/blackt/: index.md  module.md
readme-assets/icons/: BlackT.xcf
tests/: test_main.py
tests/data/: spaces.txt  tabs.txt
