[tool.poetry]
name = "blackt"
version = "2021a4"
description = ""
authors = ["FredHappyface"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/blackt"
repository = "https://github.com/FHPythonUtils/blackt"
documentation = "https://github.com/FHPythonUtils/blackt/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.6"
appdirs = "<2,>=1.4.4"
click = "<8,>=7.1.2"
mypy-extensions = "<2,>=0.4.3"
pathspec = "<2,>=0.8.1"
regex = "<2023,>=2021.4.4"
toml = "<2,>=0.10.2"
typed-ast = "<2,>=1.4.2"
typing-extensions = "<4,>=3.7.4"



[tool.poetry.scripts]
blackt = 'blackt:patched_main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
